classDiagram
  class src {
  }
  class cluster_analyser {
  }
  class embedder {
  }
  class embedder_repository_facade {
  }
  class embedding_finder {
  }
  class file_repository {
  }
  class html_file_downloader {
  }
  class html_link_crawler {
  }
  class make_local_file_path {
  }
  class search_pipeline {
  }
  class summariser {
  }
  class summary_repository_facade {
  }
  class text_repository_facade {
  }
  class theme_finder {
  }
  class web_searcher {
  }
  class workflow {
  }
  cluster_analyser --> workflow
  embedder --> embedder_repository_facade
  embedder --> workflow
  embedder_repository_facade --> file_repository
  embedding_finder --> embedder
  embedding_finder --> workflow
  file_repository --> make_local_file_path
  html_file_downloader --> text_repository_facade
  html_file_downloader --> workflow
  html_link_crawler --> workflow
  search_pipeline --> cluster_analyser
  search_pipeline --> embedder
  search_pipeline --> embedding_finder
  search_pipeline --> html_file_downloader
  search_pipeline --> summariser
  search_pipeline --> theme_finder
  search_pipeline --> web_searcher
  search_pipeline --> workflow
  summariser --> summary_repository_facade
  summariser --> workflow
  summary_repository_facade --> file_repository
  text_repository_facade --> file_repository
  web_searcher --> workflow
